--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
     -->
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="%PUBLIC_URL%/bootstrap-input-spinner.js"></script>
+    <script>
+        $('input[type="number"]').inputSpinner();
+    </script> -->
     <title>BCOIP PRO</title>
   </head>
   <body>
