add point exchange events in bank page

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script>
         $('input[type="number"]').inputSpinner();
     </script> -->
-    <title>BCOIP PRO</title>
+    <title>BCLP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
